syntax = "proto3";

package file;

option go_package = "tages.rasulabduvaitov.net";
service FileService {
  rpc UploadFile(FileRequest) returns (FileResponse) {}
  rpc GetFileList(Empty) returns (FileList) {}
  rpc DownloadFile(FileRequest) returns (stream FileChunk) {}
}

message FileRequest {
  bytes file_content = 1;
  string file_name = 2;
}

message FileResponse {
  string message = 1;
}

message File {
  string file_name = 1;
  string created_at = 2;
  string updated_at = 3;
}

message FileList {
  repeated File files = 1;
}

message Empty {}
message FileChunk {
  bytes content = 1;
}
